@startuml
skinparam monochrome true
skinparam classAttributeIconSize 0

interface IModule
!startsub default
class JsonIntermediateFormatSerializer {
    + IsActive: bool <<get>> <<set>>
    + Identifier: Guid <<get>>
    + Initialize(isEnabled : bool) : void
}
!endsub

IModule <|-- JsonIntermediateFormatSerializer
"DefaultEncodeableEventQueue<JsonIntermediateFormatSample>" <|-- JsonIntermediateFormatSerializer
@enduml